Fix overflow issue in html element to prevent horizontal scrolling

--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -17,6 +17,7 @@ html {
   font-weight: var(--fw-regular);
   font-style: normal;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 body {
